add ai logo and a little styling

--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Morse Audio</title>
+    <title>Play MQ Morse Code</title>
 </head>
 <body>
-    <h1>Play Morse Audio</h1>
-    
-    <p>If your browser supports any of the following formats, the Morse code audio will play:</p>
+    <div style="max-width: 640px">
+        <h1>Play MQ Morse Code</h1>
 
-    <audio controls>
-        <source src="morse.webm" type="audio/webm">
-        <source src="morse.mp4" type="audio/mp4">
-        <source src="morse.wav" type="audio/wav">
-        Your browser does not support the audio element.
-    </audio>
+        <audio controls style="width: 100%">
+            <source src="morse.webm" type="audio/webm">
+            <source src="morse.mp4" type="audio/mp4">
+            <source src="morse.wav" type="audio/wav">
+            Your browser does not support the audio element.
+        </audio>
+        <br>
+        <img style="max-width: 100%" src="mq-speurtocht-logo.webp">
 
-    <p>If the audio doesn't play, your browser may not support these formats.</p>
+        <p style="font-style: italic">Als de audio niet afspeelt, Whatsapp dan even.</p>
+    </div>
 </body>
 </html>
-
